# minengine

./: .gitmodules  .travis.yml  CMakeLists.txt
lib/glew-1.13.0/: CMakeLists.txt
shaders/: default.120.frag  default.120.vert  default.330.frag  default.330.glsl  default.330.vert
src/: client.cpp  engine.cpp  engine.hpp  server.cpp  test.cpp
src/client/: Camera.cpp  Camera.hpp  ClientModel.cpp  ClientModel.hpp  ClientObject.cpp  ClientObject.hpp  GLCheck.hpp  LightInfo.hpp  LuaLight.cpp  LuaObject.cpp  MaterialInfo.hpp  MusicCache.cpp  MusicCache.hpp  ResourceCache.cpp  ResourceCache.hpp  Shader.cpp  Shader.hpp  ShaderCache.cpp  ShaderCache.hpp  TextureCache.cpp  TextureCache.hpp  Transform3D.cpp  Transform3D.hpp  Transformable3D.cpp  Transformable3D.hpp  client.cpp
src/engine/: engine.cpp  engine.hpp  entity.cpp  entity.hpp  math.cpp  math.hpp  model.cpp  model.hpp  network.cpp  network.hpp  physics.cpp  physics.hpp  types.cpp  types.hpp  world.cpp  world.hpp
src/server/: server.cpp
test/: test_physics.cpp
